force-app/main/default/objects/Asset/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Originating order for this warranty asset</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Warranty Assets</relationshipLabel>
    <relationshipName>Warranty_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>