force-app/main/default/objects/Asset/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <description>PurchaseDate + Warranty_Months__c, set by Register_Warranty flow</description>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>