force-app/main/default/objects/Asset/fields/Warranty_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Warranty term in months, used to compute Warranty_End_Date__c</description>
    <label>Warranty Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>